--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 	<title>国色</title>
 </head>
  	<body>
+ 		<div id="info">
+ 		<p>This is my work which uses D3 to rebuild the website——<a href="http://nipponcolors.com/">Nippon Colors</a><p>
+ 		</div>
  	</body>
  	<script type="text/javascript" src="js/d3.js"></script>
 	<script type="text/javascript" src="js/color.js"></script>
